--- a/site/style/template_document.css
+++ b/site/style/template_document.css
@@ -33,6 +33,22 @@ body {
   .doc-table tr {
     border-bottom: 1px solid var(--secondary-dark);
   }
+  .doc-table th:nth-child(1),
+  .doc-table td:nth-child(1) {
+    width: 40%; /* Titolo */
+  }
+  .doc-table th:nth-child(2),
+  .doc-table td:nth-child(2) {
+    width: 15%; /* Versione */
+  }
+  .doc-table th:nth-child(3),
+  .doc-table td:nth-child(3) {
+    width: 20%; /* Ultima Modifica */
+  }
+  .doc-table th:nth-child(4),
+  .doc-table td:nth-child(4) {
+    width: 100%; /* Azioni download/preview */
+  }
   .btn-download {
     background-color: var(--secondary-dark);
     color: var(--text-dark);
@@ -130,9 +146,13 @@ body {
   font-size: 1.2rem;
 }
 
+.table-h2 {
+  padding: 1rem;
+}
 .table-container {
   overflow-x: auto;
   border-radius: 0.5rem;
+  margin-bottom: 1rem;
 }
 
 .container h1 {
